text alignment and cv corrections

--- a/css/style.css
+++ b/css/style.css
@@ -688,7 +688,13 @@ header .intro-text {
 	float: left;
 	width: 41%;
 	padding: 0 20px 20px 30px;
+	text-align: justify;
+	text-justify: distribute;
+}
+.timeline>li .timeline-panel h4 {
+	
 	text-align: left;
+	
 }
 .timeline>li .timeline-image {
 	left: 50%;
@@ -704,7 +710,8 @@ header .intro-text {
 .timeline>li.timeline-inverted>.timeline-panel {
 	float: right;
 	padding: 0 30px 20px 20px;
-	text-align: left;
+	text-align: justify;
+	text-justify: distribute;
 }
 }
 
